--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ abbr[title] {
   /* 2 */
   text-decoration: underline dotted;
   /* 2 */
+
   border-bottom: none;
   /* 1 */
 }
@@ -26,6 +27,7 @@ select,
 textarea {
   margin: 0;
   /* 2 */
+
   font-size: 100%;
   /* 1 */
   line-height: 1.15;
@@ -72,6 +74,7 @@ button::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   padding: 0;
+
   border-style: none;
 }
 
@@ -107,6 +110,7 @@ textarea {
   font-style: normal;
   font-weight: 300;
   font-family: "Lato";
+
   font-display: swap;
   src: url("./assets/fonts/lato-light-webfont.woff2") format("woff2");
 }
@@ -115,6 +119,7 @@ textarea {
   font-style: normal;
   font-weight: 400;
   font-family: "Lato";
+
   font-display: swap;
   src: url("./assets/fonts/lato-regular-webfont.woff2") format("woff2");
 }
@@ -123,6 +128,7 @@ textarea {
   font-style: normal;
   font-weight: 700;
   font-family: "Lato";
+
   font-display: swap;
   src: url("./assets/fonts/lato-bold-webfont.woff2") format("woff2");
 }
@@ -131,12 +137,14 @@ textarea {
   font-style: normal;
   font-weight: 900;
   font-family: "Lato";
+
   font-display: swap;
   src: url("./assets/fonts/lato-black-webfont.woff2") format("woff2");
 }
 
 html {
   box-sizing: border-box;
+
   scroll-behavior: smooth;
 }
 
@@ -157,22 +165,27 @@ ul,
 li {
   margin: 0;
   padding: 0;
+
   list-style: none;
 }
 
 body {
-  min-width: 1020px;
+  min-width: 320px;
   margin: 0;
+
   font-size: 18px;
   line-height: 30px;
   font-family: "Lato", "Arial", "Helvetica", sans-serif;
   color: #767e9e;
+
   background-color: #f2f2f2;
 }
 
 .container {
   position: relative;
-  width: 960px;
+
+  width: 100%;
+  max-width: 960px;
   margin: 0 auto;
   padding: 0 10px;
   overflow: hidden;
@@ -183,7 +196,9 @@ body {
   top: 0;
   left: 0;
   z-index: 10;
+
   color: #ffffff;
+
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
 }
@@ -206,6 +221,7 @@ body {
   position: relative;
   top: 7px;
   left: 0;
+
   font-size: inherit;
   color: #f06c64;
 }
@@ -214,12 +230,15 @@ body {
   display: inline-flex;
   margin: 0;
   padding: 0;
+
   text-align: justify;
 }
 
 .navigation__item {
   position: relative;
+
   margin-right: 28px;
+
   list-style-type: disc;
   font-size: 12px;
   color: #494e62;
@@ -240,11 +259,15 @@ body {
 .navigation__link {
   display: block;
   padding-top: 15px;
+
   color: #ffffff;
+
   transition: color 0.5s ease;
 }
 
-.navigation__link--current, .navigation__link:hover, .navigation__link:active {
+.navigation__link--current,
+.navigation__link:hover,
+.navigation__link:active {
   color: #f06c64;
 }
 
@@ -254,16 +277,23 @@ body {
 
 .slider__list {
   position: relative;
+
   display: grid;
   overflow: hidden;
 }
 
 .slider__slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   padding: 54px 0 57px;
+
   opacity: 0;
+
   transition: opacity 0.2s linear;
+
   grid-column: 1 / -1;
   grid-row: 1 / -1;
 }
@@ -292,6 +322,7 @@ body {
 
 .slider__inner {
   position: relative;
+
   display: flex;
   align-items: center;
   padding: 0 72px;
@@ -305,70 +336,72 @@ body {
   position: relative;
 }
 
-.slider__zone::after {
-  content: "";
-  position: absolute;
-  width: 188px;
-  height: 333px;
-  background-color: #000000;
-  border-radius: 4px;
-  opacity: 0;
-  transition: opacity 0.5s ease;
+.slider__zone--vertical {
+  display: grid;
+  margin-right: 73px;
 }
 
-.slider__zone--vertical::after {
-  top: 64px;
-  left: 14px;
-}
-
-.slider__zone--horizontal::after {
-  top: -60px;
-  left: 133px;
-  transform: rotate(90deg);
-}
-
-.slider__zone--off::after {
-  opacity: 1;
+.slider__zone--horizontal {
+  display: grid;
 }
 
 .slider__phone-button {
-  position: absolute;
+  position: relative;
   z-index: 2;
-  width: 42px;
-  height: 42px;
+
+  align-self: end;
+
   font-size: 0;
+  color: transparent;
+
   background-color: transparent;
   border-color: transparent;
-  border-radius: 50%;
+  outline: 0;
   cursor: pointer;
+
+  grid-column: 1;
+  grid-row: 1;
 }
 
 .slider__phone-button--vertical {
-  bottom: 44px;
-  left: 86px;
+  width: 100%;
+  height: 60px;
 }
 
-.slider__phone-button--hotizontal {
-  bottom: 123px;
-  left: 8px;
+.slider__phone-button--horizontal {
+  width: 60px;
+  height: 100%;
 }
 
 .slider__image {
   position: relative;
+
   max-width: 100%;
-}
 
-.slider__image--left {
-  top: -1px;
-  margin-right: 73px;
-}
-
-.slider__image--right {
-  top: -2px;
+  transition: opacity 0.1s ease;
 }
 
 .slider__image--center {
   margin: 0 -26px;
+}
+
+.slider__image--left,
+.slider__image--right {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.slider__zone--off .slider__image--left,
+.slider__zone--off .slider__image--right {
+  z-index: -1;
+}
+
+.slider__image--dark {
+  z-index: -1;
+}
+
+.slider__zone--off .slider__image--dark {
+  z-index: 1;
 }
 
 .slider__controls {
@@ -377,22 +410,28 @@ body {
   left: 0;
   left: 50%;
   z-index: 1;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100%;
+
   transform: translateX(-50%);
 }
 
 .slider__btn {
   position: relative;
   top: -3px;
+
   width: 41px;
   height: 27px;
+
   font-size: 0;
+
   background-color: transparent;
   border: 0;
   cursor: pointer;
+
   transition: all 0.5s ease;
 }
 
@@ -401,8 +440,10 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+
   width: inherit;
   height: inherit;
+
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -424,36 +465,39 @@ body {
   pointer-events: none;
 }
 
-.slider__btn:hover, .slider__btn:active {
+.slider__btn:hover,
+.slider__btn:active {
   transform: scale(1.2);
   opacity: 0.8;
 }
 
 @keyframes fadeInLeft {
   from {
-    opacity: 0;
     transform: translate3d(-100%, 0, 0);
+    opacity: 0;
   }
   to {
-    opacity: 1;
     transform: translate3d(0, 0, 0);
+    opacity: 1;
   }
 }
 
 @keyframes fadeInRight {
   from {
-    opacity: 0;
     transform: translate3d(100%, 0, 0);
+    opacity: 0;
   }
   to {
-    opacity: 1;
     transform: translate3d(0, 0, 0);
+    opacity: 1;
   }
 }
 
 .services {
   padding: 38px 0 60px;
+
   color: #666d89;
+
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
 }
@@ -464,6 +508,7 @@ body {
 
 .services__title {
   margin-bottom: 20px;
+
   font-weight: 900;
   font-size: 30px;
 }
@@ -489,13 +534,16 @@ body {
   width: 59px;
   height: 59px;
   margin-right: 19px;
+
   text-align: center;
+
   border: 1px solid currentColor;
   border-radius: 50%;
 }
 
 .feature__title {
   margin: -1px 0 10px 0;
+
   font-weight: 900;
   font-size: 18px;
   line-height: 1;
@@ -509,6 +557,7 @@ body {
   height: 63px;
   margin: 0;
   overflow: hidden;
+
   font-size: 12px;
   line-height: 21.5px;
   text-align: justify;
@@ -518,19 +567,23 @@ body {
 /* Portfolio */
 .portfolio {
   padding: 38px 0 67px;
+
   color: #767e9e;
+
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
 }
 
 .portfolio__title {
   margin-bottom: 21px;
+
   font-weight: 900;
   font-size: 30px;
 }
 
 .portfolio__description {
   margin-bottom: 5px;
+
   font-weight: 300;
 }
 
@@ -553,19 +606,23 @@ body {
 .portfolio__link {
   display: block;
   padding: 0 6px 0 8px;
+
   font-size: 12px;
   line-height: 19px;
   text-align: center;
   color: #666d89;
   text-transform: none;
+
   border: 1px solid currentColor;
   border-radius: 5px;
+
   transition: all 0.3s ease;
 }
 
 .portfolio__link--active {
-  pointer-events: none;
   color: #dedede;
+
+  pointer-events: none;
 }
 
 .portfolio__link:hover {
@@ -581,6 +638,7 @@ body {
   display: block;
   max-width: 100%;
   height: 100%;
+
   transition: border 0.25s linear;
 }
 
@@ -592,6 +650,7 @@ body {
 .item-1 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.1s;
+
   grid-column: 1;
   grid-row: 1;
 }
@@ -599,6 +658,7 @@ body {
 .item-2 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.2s;
+
   grid-column: 2;
   grid-row: 1;
 }
@@ -606,6 +666,7 @@ body {
 .item-3 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.3s;
+
   grid-column: 3;
   grid-row: 1;
 }
@@ -613,6 +674,7 @@ body {
 .item-4 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.4s;
+
   grid-column: 4;
   grid-row: 1;
 }
@@ -620,6 +682,7 @@ body {
 .item-5 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.5s;
+
   grid-column: 1;
   grid-row: 2;
 }
@@ -627,6 +690,7 @@ body {
 .item-6 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.6s;
+
   grid-column: 2;
   grid-row: 2;
 }
@@ -634,6 +698,7 @@ body {
 .item-7 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.55s;
+
   grid-column: 3;
   grid-row: 2;
 }
@@ -641,6 +706,7 @@ body {
 .item-8 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.45s;
+
   grid-column: 4;
   grid-row: 2;
 }
@@ -648,6 +714,7 @@ body {
 .item-9 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.35s;
+
   grid-column: 1;
   grid-row: 3;
 }
@@ -655,6 +722,7 @@ body {
 .item-10 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.25s;
+
   grid-column: 2;
   grid-row: 3;
 }
@@ -662,6 +730,7 @@ body {
 .item-11 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.15s;
+
   grid-column: 3;
   grid-row: 3;
 }
@@ -669,6 +738,7 @@ body {
 .item-12 {
   animation: scale 0.5s ease-in forwards;
   animation-delay: 0.05s;
+
   grid-column: 4;
   grid-row: 3;
 }
@@ -690,13 +760,16 @@ body {
 /* About */
 .about {
   padding: 38px 0 58px;
+
   color: #666d89;
+
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
 }
 
 .about__title {
   margin-bottom: 21px;
+
   font-weight: 900;
   font-size: 30px;
   text-transform: capitalize;
@@ -704,6 +777,7 @@ body {
 
 .about__description {
   margin-bottom: 44px;
+
   font-weight: 300;
   font-size: 18px;
   line-height: 30px;
@@ -724,6 +798,7 @@ body {
 .user__name {
   margin-bottom: 9px;
   overflow: hidden;
+
   font-weight: 900;
   font-size: 18px;
   line-height: 1;
@@ -733,6 +808,7 @@ body {
 
 .user__bio {
   margin: 0;
+
   font-weight: 400;
   font-size: 12px;
   line-height: 22px;
@@ -757,8 +833,10 @@ body {
   display: block;
   width: 32px;
   height: 32px;
+
   background: transparent no-repeat center / contain;
   border-radius: 50%;
+
   transition: background-color 0.3s ease;
 }
 
@@ -778,7 +856,8 @@ body {
   background-image: url(./assets/images/lk-icon.png);
 }
 
-.social__link:hover, .social__link:active {
+.social__link:hover,
+.social__link:active {
   background-color: #ffffff;
   transform: scale(1.05);
 }
@@ -786,19 +865,23 @@ body {
 /* Contact */
 .contact {
   padding: 38px 0 51px;
+
   color: #f0d8d9;
+
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
 }
 
 .contact__title {
   margin-bottom: 21px;
+
   font-weight: 900;
   font-size: 30px;
 }
 
 .contact__description {
   margin-bottom: 43px;
+
   font-weight: 300;
   font-size: 18px;
   text-align: justify;
@@ -806,13 +889,16 @@ body {
 
 .contact__subtitle {
   margin: 0 0 11px;
+
   font-weight: 900;
   font-size: 18px;
   line-height: 1;
 }
 
-.contact__text, .contact__address {
+.contact__text,
+.contact__address {
   margin-bottom: 22px;
+
   font-style: normal;
   font-weight: 300;
   font-size: 12px;
@@ -820,7 +906,8 @@ body {
   text-align: justify;
 }
 
-.contact__text a, .contact__address a {
+.contact__text a,
+.contact__address a {
   font-weight: normal;
   text-transform: lowercase;
 }
@@ -829,12 +916,15 @@ body {
   content: "";
   position: relative;
   top: -1px;
+
   display: inline-block;
   width: 12px;
   height: 11px;
   margin-right: 8px;
+
   vertical-align: middle;
   text-align: center;
+
   background: no-repeat 50% 50% / contain;
 }
 
@@ -848,7 +938,9 @@ body {
 
 .contact__address--email::before {
   top: 1px;
+
   width: 13px;
+
   background-image: url(./assets/images/mail-icon.svg);
 }
 
@@ -872,6 +964,7 @@ body {
 /* Form */
 .form {
   position: relative;
+
   width: 100%;
 }
 
@@ -887,17 +980,21 @@ body {
   display: block;
   width: 100%;
   padding: 4px 14px;
+
   font: inherit;
   font-size: 12px;
   color: #f48c8f;
+
   background-color: #d6564f;
   border: 0;
   border-radius: 5px;
+
   transition: all 0.3s ease;
 }
 
 .form__field--textarea {
   height: 202px;
+
   resize: none;
 }
 
@@ -931,11 +1028,14 @@ body {
 
 .form__submit-btn {
   padding: 10px;
+
   font: inherit;
-  color: inherit;
+  color: #886a30;
   text-transform: uppercase;
-  background: #d6564f;
+
+  background: #fbc65f;
   border: 0;
+  border-radius: 5px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -943,7 +1043,9 @@ body {
 /* Footer */
 .footer {
   padding: 11px 0;
+
   color: #666d89;
+
   background-color: #2d303a;
 }
 
@@ -966,11 +1068,12 @@ body {
 
 .grid--3col {
   grid-gap: 35px 20px;
-  grid-template-columns: 299px 301px 300px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 .grid--4col {
   height: 601px;
+
   grid-gap: 20px;
   grid-template-columns: 220px 220px 220px 220px;
 }
@@ -988,11 +1091,14 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
+
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+
   background-color: rgba(45, 48, 58, 0.3);
 }
 
@@ -1001,9 +1107,11 @@ body {
   min-width: 150px;
   margin: 0 auto;
   padding: 10px;
+
   font: inherit;
   color: #ffffff;
   text-transform: uppercase;
+
   background: #2d303a;
   border: 0;
   border-radius: 5px;
@@ -1014,12 +1122,14 @@ body {
 .popup__inner {
   width: 360px;
   padding: 40px;
+
   background-color: #ffffff;
   border-radius: 25px;
 }
 
 .popup__title {
   margin-bottom: 15px;
+
   font-size: 36px;
   text-align: center;
 }
@@ -1027,19 +1137,210 @@ body {
 .popup p {
   margin-bottom: 15px;
   padding: 5px 0;
+
   font-weight: bold;
   font-size: 20px;
+
   border-bottom: 2px solid #000000;
 }
 
 /* Hidden class */
 .visually-hidden {
   position: absolute;
+
   width: 1px;
   height: 1px;
   padding: 0;
   overflow: hidden;
+
   border: 0;
+
   clip: rect(1px, 1px, 1px, 1px);
 }
-/*# sourceMappingURL=style.css.map */
+
+.mobile-nav-btn {
+  display: none;
+}
+
+/* @media */
+@media (max-width: 768px) {
+  .container {
+    padding: 0 40px;
+  }
+  /* Slider */
+  .slider .slider__controls {
+    padding: 0 20px;
+  }
+  .slider .slider__inner {
+    padding: 0 72px;
+  }
+  .grid--4col {
+    height: auto;
+
+    grid-template-columns: repeat(3, 217px);
+  }
+  .about .grid--3col {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .user__image {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+  }
+  .col-left {
+    flex: 1;
+    width: 100%;
+    max-width: 620px;
+    margin-right: 20px;
+  }
+  .about .grid--3col {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .contact,
+  .about,
+  .portfolio,
+  .services {
+    padding: 30px 0;
+  }
+  .footer__inner {
+    justify-content: center;
+  }
+  .copyright {
+    display: none;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    padding: 0 20px;
+  }
+  .header__navigation {
+    position: relative;
+
+    padding: 13px 0;
+  }
+  .header__navigation.menu-open .mobile-nav-btn span {
+    transform: rotate(90deg);
+  }
+  .header__navigation.menu-open .navigation {
+    transform: translateX(0);
+  }
+  .mobile-nav-btn {
+    position: absolute;
+    left: 0;
+    z-index: 2;
+
+    display: block;
+    width: 25px;
+    height: 20px;
+
+    font-size: 0;
+
+    background-color: transparent;
+    border-color: transparent;
+    transform-origin: 50% 50%;
+  }
+  .mobile-nav-btn span {
+    position: absolute;
+    left: 0;
+
+    display: inline-block;
+    width: 25px;
+    height: 2.5px;
+
+    vertical-align: bottom;
+
+    background: #ffffff;
+    transform-origin: 50% 50%;
+
+    transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  }
+  .mobile-nav-btn span::before,
+  .mobile-nav-btn span::after {
+    content: "";
+    position: absolute;
+    left: 0;
+
+    width: inherit;
+    height: inherit;
+
+    background: inherit;
+  }
+  .mobile-nav-btn span::before {
+    top: 10px;
+  }
+  .mobile-nav-btn span::after {
+    top: -10px;
+  }
+  .logo {
+    z-index: 2;
+
+    margin: 0 auto;
+  }
+  .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 280px;
+    height: 100%;
+    padding: 71px 20px 0;
+
+    background-color: #2d303a;
+    transform: translateX(-100%);
+
+    transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  }
+  .navigation__item {
+    margin: 0;
+
+    list-style: none;
+  }
+  .slider__slide {
+    padding: 20px 0;
+  }
+  .slider .slider__inner {
+    padding: 0 40px;
+  }
+  .slider__btn--prev {
+    left: -20px;
+  }
+  .slider__btn--next {
+    right: -20px;
+    left: auto;
+  }
+  .grid--4col {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .grid--4row {
+    grid-template-rows: repeat(6, 128px);
+  }
+  .about .grid--3col {
+    grid-template-columns: 1fr;
+  }
+  .user__image {
+    width: 100%;
+
+    object-fit: cover;
+  }
+  .columns {
+    flex-direction: column;
+  }
+  .col {
+    flex: 1 1 100%;
+    margin: 0 0 20px;
+  }
+  .form__submit-btn {
+    width: 100%;
+  }
+  .contact,
+  .about,
+  .portfolio,
+  .services {
+    padding: 20px 0;
+  }
+}
